# Rusty-FITPACK

./: CHANGELOG.md  Cargo.toml  README.md
src/: curfit.rs  fpback.rs  fpbspl.rs  fpchec.rs  fpcurf.rs  fpdisc.rs  fpgivs.rs  fpknot.rs  fprati.rs  fprota.rs  lib.rs
src/splines/: fpback.rs  fpchec.rs  fpknot.rs  fprota.rs  mod.rs
