[package]
name = "rusty-fitpack"
version = "0.1.0"
authors = ["Joscha Hoche joscha.hoche@uni-wuerzburg.de"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.12"

# enable LaTeX rendering in documentation
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
