[package]
name = "rusty-fitpack"
version = "0.1.2"
authors = ["Joscha Hoche joscha.hoche@uni-wuerzburg.de"]
edition = "2021"
repository = "https://github.com/mitric-lab/Rusty-FITPACK"
license = "GPL-3.0"
readme = "README.md"
description = "1D routines for spline interpolation and fitting"
keywords = ["FITPACK", "spline", "interpolation"]

[dependencies]
ndarray = "0.12"

# enable LaTeX rendering in documentation
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
